tests/diagnostics/variables/duplicate_binding/expect.txt
# exit: 1
input/main.lang0:3:5: error: duplicate binding 'x'
      x := 2
      ^
